@@ -1,15 +1,13 @@
 package store.aurora.search.service.impl;
 
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Isolation;
 import org.springframework.transaction.annotation.Transactional;
 import store.aurora.book.repository.BookRepository;
 
-import store.aurora.book.repository.LikeRepository;
 import store.aurora.book.service.LikeService;
 import store.aurora.search.dto.BookSearchEntityDTO;
 import store.aurora.search.dto.BookSearchResponseDTO;
@@ -18,18 +16,17 @@ import store.aurora.search.service.SearchService;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import static store.aurora.utils.ValidationUtils.*;
 
 @Service
 @Transactional(isolation = Isolation.REPEATABLE_READ)
+@RequiredArgsConstructor
 public class SearchServiceImpl implements SearchService {
-    @Autowired
-    private BookRepository bookRepository;
 
-    @Autowired
-    private LikeService likeService;
+    private final BookRepository bookRepository;
+
+    private final LikeService likeService;
 
     @Override
     public Page<BookSearchResponseDTO> findBooksByTitleWithDetails(String userId, String title, Pageable pageable) {
@@ -48,7 +45,7 @@ public class SearchServiceImpl implements SearchService {
             // 모든 책들의 id를 모아서 한 번에 좋아요 여부를 조회
             List<Long> bookIds = bookSearchResponseDTOPage.getContent().stream()
                     .map(BookSearchResponseDTO::getId)
-                    .collect(Collectors.toList());
+                    .toList();
 
             // 유저가 좋아요를 눌렀던 책 목록을 한 번에 조회
             Set<Long> likedBookIds = likeService.getLikedBookIds(userId, bookIds);
@@ -80,7 +77,7 @@ public class SearchServiceImpl implements SearchService {
             // 모든 책들의 id를 모아서 한 번에 좋아요 여부를 조회
             List<Long> bookIds = bookSearchResponseDTOPage.getContent().stream()
                     .map(BookSearchResponseDTO::getId)
-                    .collect(Collectors.toList());
+                    .toList();
 
             // 유저가 좋아요를 눌렀던 책 목록을 한 번에 조회
             Set<Long> likedBookIds = likeService.getLikedBookIds(userId, bookIds);
@@ -111,7 +108,8 @@ public class SearchServiceImpl implements SearchService {
             // 모든 책들의 id를 모아서 한 번에 좋아요 여부를 조회
             List<Long> bookIds = bookSearchResponseDTOPage.getContent().stream()
                     .map(BookSearchResponseDTO::getId)
-                    .collect(Collectors.toList());
+                    .toList();
+
 
             // 유저가 좋아요를 눌렀던 책 목록을 한 번에 조회
             Set<Long> likedBookIds = likeService.getLikedBookIds(userId, bookIds);
